# danlogs

./: .gitignore  Cargo.toml  README.md
Rust/Practical Rust Projects - Applied Rust/pikachu_volleyball/config/: display.ron
Rust/Practical Rust Projects - Applied Rust/pikachu_volleyball/src/: audio.rs  main.rs  systems.rs
Rust/Practical Rust Projects - Applied Rust/pikasay/: Cargo.toml  README.md
Rust/Practical Rust Projects - Applied Rust/pikasay_gui/src/: main.rs
Rust/Practical Rust Projects - Applied Rust/pikasay_gui_glade/: Cargo.toml
Rust/Practical Rust Projects - Applied Rust/pikasay_tui/src/: main.rs
Rust/Shorts/quiz01/: Cargo.toml
Rust/Shorts/quiz01/src/: main.rs
Rust/Solving LeetCode Questions in Rust - Exercises/question1/: Cargo.toml
Rust/Solving LeetCode Questions in Rust - Exercises/question1/src/: main.rs
Rust/The Rust Programming Language - Tutorials/chapter04/1references/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter08/vectors/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter09/quick_error_hack/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter12/minigrep/: output.txt  poem.txt
Rust/The Rust Programming Language - Tutorials/chapter13/closures/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter13/iterators/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter15/deref_drop/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter15/rc-refcell/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter15/sp_box/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter16/fearless-concurrency-example/: Cargo.toml  Makefile  concurrency  cpp-program
Rust/The Rust Programming Language - Tutorials/chapter16/message-passing/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter16/mutex-and-arc/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter16/send-sync/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter17/: README.md
Rust/The Rust Programming Language - Tutorials/chapter19/advanced_traits/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter19/unsafe_rust/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter7/restaurant/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/chapter8/extra_derefs/: Cargo.toml
Rust/The Rust Programming Language - Tutorials/extra/asref_borrow/: book.toml
WebAssembly/Understanding WebAssembly text format - Tutorials/0basics/: basics.wat
WebAssembly/Understanding WebAssembly text format - Tutorials/2setup/: setup.md
WebAssembly/Understanding WebAssembly text format - Tutorials/3js_api/: index.html  js_api.js  js_api.wat
WebAssembly/Understanding WebAssembly text format - Tutorials/4call_and_import/: call_import.js  call_import.wat  index.html
WebAssembly/Understanding WebAssembly text format - Tutorials/5globals_memory/: globals_memory.js  globals_memory.wat  index.html
WebAssembly/Understanding WebAssembly text format - Tutorials/6tables/: index.html
WebAssembly/Understanding WebAssembly text format - Tutorials/hello_world/: hello_world.js  hello_world.wat
WebAssembly/WebAssembly In Action - Tutorials/why_should_you_learn_wasm/with_cpp/: index.html  primes.cpp  primes.js  primes.wasm
WebAssembly/WebAssembly In Action - Tutorials/why_should_you_learn_wasm/with_js/: index.html  primes.js
rust/chapter10/generics/: Cargo.toml
rust/chapter10/generics/src/: main.rs
rust/chapter10/lifetimes/: Cargo.toml
rust/chapter10/lifetimes/src/: checklist.md  main.rs
rust/chapter10/traits/: Cargo.toml
rust/chapter11/testing/: Cargo.toml
rust/chapter11/testing/src/: lib.rs
rust/chapter11/testing/tests/: integration1.rs  integration2.rs
rust/chapter12/minigrep/: Cargo.toml
rust/chapter13/closures/src/: main.rs
rust/chapter3/3branches/: Cargo.toml
rust/chapter5/0structs/: Cargo.toml
rust/chapter6/0enums/src/: main.rs
rust/chapter6/enums/: Cargo.toml
rust/chapter6/enums/src/: main.rs
rust/chapter7/restaurant/: Cargo.toml
rust/chapter7/restaurant/src/: front_of_house.rs  lib.rs
rust/chapter8/exercise1/: Cargo.toml
rust/chapter8/exercise2/: Cargo.toml
rust/chapter8/exercise3/: Cargo.toml
rust/chapter8/extra_derefs/src/: main.rs
rust/chapter8/hashmaps/: Cargo.toml
rust/chapter8/hashmaps/src/: main.rs
rust/chapter8/strings/: Cargo.toml
rust/chapter9/error_handling/: Cargo.toml
rust/chapter9/error_handling/src/: main.rs
rust/leetcode/question7/: Cargo.toml
rust/leetcode/question7/src/: main.rs
rust/leetcode/question9/: Cargo.toml
rust/leetcode/question9/src/: main.rs
rust/projects/pikachu_volleyball/: Cargo.toml
rust/projects/pikasay/: alt_pikachu.txt
rust/projects/pikasay/src/: main.rs
rust/projects/pikasay_gui/: Cargo.toml
rust/projects/pikasay_gui_glade/: layout1.glade
rust/projects/pikasay_tui/: Cargo.toml
wasm/1stack/: stack.wat
wasm/2setup/: setup.md
wasm/4call_and_import/: call_import.wasm
wasm/5globals_memory/: globals_memory.wasm
wasm/6tables/: tables.js  tables.wasm  tables.wat
wasm/hello_world/: hello_world.wasm  index.html
(+60 files in other folders)
