[workspace]
members = [
  "Rust/Practical Rust Projects - Applied Rust/pikachu_volleyball",
  "Rust/Practical Rust Projects - Applied Rust/pikasay",
  "Rust/Practical Rust Projects - Applied Rust/pikasay_gui",
  "Rust/Practical Rust Projects - Applied Rust/pikasay_gui_glade",
  "Rust/Practical Rust Projects - Applied Rust/pikasay_tui",
  "Rust/Solving LeetCode Questions in Rust - Exercises/question1",
  "Rust/Solving LeetCode Questions in Rust - Exercises/question7",
  "Rust/Solving LeetCode Questions in Rust - Exercises/question9",
  "Rust/The Rust Programming Language - Tutorials/chapter03/0variables",
  "Rust/The Rust Programming Language - Tutorials/chapter03/1data_types",
  "Rust/The Rust Programming Language - Tutorials/chapter03/2functions",
  "Rust/The Rust Programming Language - Tutorials/chapter03/3branches",
  "Rust/The Rust Programming Language - Tutorials/chapter04/0ownership",
  "Rust/The Rust Programming Language - Tutorials/chapter04/1references",
  "Rust/The Rust Programming Language - Tutorials/chapter04/2slices",
  "Rust/The Rust Programming Language - Tutorials/chapter05/0structs",
  "Rust/The Rust Programming Language - Tutorials/chapter06/0enums",
  "Rust/The Rust Programming Language - Tutorials/chapter07/restaurant",
  "Rust/The Rust Programming Language - Tutorials/chapter08/exercise1",
  "Rust/The Rust Programming Language - Tutorials/chapter08/exercise2",
  "Rust/The Rust Programming Language - Tutorials/chapter08/exercise3",
  "Rust/The Rust Programming Language - Tutorials/chapter08/extra_derefs",
  "Rust/The Rust Programming Language - Tutorials/chapter08/hashmaps",
  "Rust/The Rust Programming Language - Tutorials/chapter08/strings",
  "Rust/The Rust Programming Language - Tutorials/chapter08/vectors",
  "Rust/The Rust Programming Language - Tutorials/chapter09/error_handling",
  "Rust/The Rust Programming Language - Tutorials/chapter09/quick_error_hack",
  "Rust/The Rust Programming Language - Tutorials/chapter10/generics",
  "Rust/The Rust Programming Language - Tutorials/chapter10/lifetimes",
  "Rust/The Rust Programming Language - Tutorials/chapter10/traits",
  "Rust/The Rust Programming Language - Tutorials/chapter11/testing",
  "Rust/The Rust Programming Language - Tutorials/chapter12/minigrep",
  "Rust/The Rust Programming Language - Tutorials/chapter13/closures",
  "Rust/The Rust Programming Language - Tutorials/chapter13/iterators",
  "Rust/The Rust Programming Language - Tutorials/chapter15/deref_drop",
  "Rust/The Rust Programming Language - Tutorials/chapter15/rc-refcell",
  "Rust/The Rust Programming Language - Tutorials/chapter15/sp_box",
  "Rust/The Rust Programming Language - Tutorials/chapter16/fearless-concurrency-example",
  "Rust/The Rust Programming Language - Tutorials/chapter16/message-passing",
  "Rust/The Rust Programming Language - Tutorials/chapter16/mutex-and-arc",
  "Rust/The Rust Programming Language - Tutorials/chapter16/send-sync",
]
