[workspace]
members = [
  "Rust/Practical Rust Projects - Applied Rust/*",
  "Rust/Solving LeetCode Questions in Rust - Exercises/*",
  "Rust/The Rust Programming Language - Tutorials/chapter03/*",
  "Rust/The Rust Programming Language - Tutorials/chapter04/*",
  "Rust/The Rust Programming Language - Tutorials/chapter05/*",
  "Rust/The Rust Programming Language - Tutorials/chapter06/*",
  "Rust/The Rust Programming Language - Tutorials/chapter07/*",
  "Rust/The Rust Programming Language - Tutorials/chapter08/*",
  "Rust/The Rust Programming Language - Tutorials/chapter09/*",
  "Rust/The Rust Programming Language - Tutorials/chapter10/*",
  "Rust/The Rust Programming Language - Tutorials/chapter11/*",
  "Rust/The Rust Programming Language - Tutorials/chapter12/*",
  "Rust/The Rust Programming Language - Tutorials/chapter13/*",
  "Rust/The Rust Programming Language - Tutorials/chapter15/*",
  "Rust/The Rust Programming Language - Tutorials/chapter16/*",
  "Rust/The Rust Programming Language - Tutorials/chapter18/*",
  "Rust/The Rust Programming Language - Tutorials/chapter19/*",
  "Rust/Shorts/*",
]
