[package]
name = "pikasay"
version = "0.1.0"
authors = ["Dan Chiarlone"]
edition = "2018"
description = "This is an homage to revered `cowsay` with a 'poke-twist'"
readme = "README.md"
repository = "https://github.com/danbugs/danlogs/tree/master/rust/projects/pikasay"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.1"
predicates = "1.0.5"