[package]
name = "pikasay_gui_glade"
version = "0.1.0"
authors = ["Dan Chiarlone <danilochiarlone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24"]